complex_httproute.yaml
---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route
spec:
  parentRefs:
    - name: gateway
      sectionName: http
  hostnames:
    - my.example.com
    - test.com
  rules:
    - matches:
      - path:
          value: /test
        headers:
          - name: "version"
            value: "v1"
      - path:
          value: /zoo
    - filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          add:
            - name: my-header
              value: foo
      - type: RequestRedirect
        requestRedirect:
          hostname: "test"
      backendRefs:
        - name: test-service
          port: 80
    - filters:
      - type: ResponseHeaderModifier
        responseHeaderModifier:
          add:
            - name: my-response
              value: foo
    - matches:
      - path:
         type: PathPrefix
         value: /bar
      backendRefs:
        - name: test-service
          port: 80
    - backendRefs:
      - name: test-service
        port: 120
        weight: 90
      - name: test-service
        port: 121
        weight: 10
