gatewayapis.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: test
spec:
  controllerName: f5.io/gateway-controller-name

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  labels:
    domain: k8s-gateway.nginx.org
spec:
  gatewayClassName: test
  listeners:
  - name: http
    port: 80
    protocol: HTTP
  addresses:
    # I have a dead machine occupid this IP 
    - value: 10.145.67.249
    #
    #  vio anohter subnet
    # - value: 10.144.72.225
    #
    # vio data subnet AdminNetwork2
    # - value: 10.145.67.245

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: test-httproute
spec:
  parentRefs:
    - name: gateway
      sectionName: http
  rules:
  - matches:
    - path: 
       type: PathPrefix
       value: /bar
  - backendRefs:
    - name: test-service
      port: 80
